--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,12 @@ p.copyright {
 		margin-bottom: -25px;
 }
 
+	.hi {
+		font-family: 'Abel'; 
+		color: #3f7f7c;
+		font-size: 45px;"
+	}
+
 /* Media Queries
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* Larger than mobile */
@@ -211,8 +217,7 @@ p.copyright {
 	}
 
 	.hi {
-		position: : fixed;
-		top: 2px;
+		font-size: 39px;
 		text-align: center;
 	}
 
@@ -223,5 +228,12 @@ p.copyright {
 	.property-details {
 		marker-top:-25px;
 		margin-bottom: 25px;
+	}
+}
+
+@media (max-width: 1024px) {
+	.mobile-contact {
+		text-align: center;
+		font-size: 25px;
 	}
 }
