--- a/css/style.css
+++ b/css/style.css
@@ -16,24 +16,24 @@
 .purple { background-color: #7accc8 ; }
 
 .experience {
-  padding-top: 2em;
- }
+	padding-top: 2em;
+}
 .experience-left h4, .experience-left-trd h4,.experience-right-snd h4 {
-  font-size: 1.8em;
-  color: #53bed6;
-  margin: 0px;
-  text-transform: uppercase;
+	font-size: 1.8em;
+	color: #53bed6;
+	margin: 0px;
+	text-transform: uppercase;
 }
 .experience-left h5, .experience-left-trd h5,.experience-right-snd h5 {
-  font-size: 1.5em;
-  color: #34353a;
-  margin: 14px 0;
+	font-size: 1.5em;
+	color: #34353a;
+	margin: 14px 0;
 }
 .experience-left p, .experience-left-trd p,.experience-right-snd p {
-  font-size: 1.3em;
-  color: #555;
-  margin-top: 8px;
-  line-height: 1.8em;
+	font-size: 1.3em;
+	color: #555;
+	margin-top: 8px;
+	line-height: 1.8em;
 }
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -151,15 +151,33 @@ p.copyright {
 }
 
 .property-details {
-		margin-top: -25px; 
-		margin-bottom: -25px;
+	margin-top: -25px; 
+	margin-bottom: -25px;
 }
 
-	.hi {
-		font-family: 'Abel'; 
-		color: #3f7f7c;
-		font-size: 45px;"
-	}
+.hi {
+	font-family: 'Abel'; 
+	color: #3f7f7c;
+	font-size: 45px;"
+}
+
+.language-select {
+	color: white;
+	border-color: white;
+	font-size: 24px;
+	position: absolute;
+    top: 0.5em;
+    right: 0.5em;
+}
+
+.language-select:hover {
+	color: #427F7C;
+	border-color: #427F7C;
+}
+
+
+
+
 
 /* Media Queries
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -174,9 +192,9 @@ p.copyright {
 	ul.social li a{font-size: .75em;}
 
 	.speech-bubble {
-	position: relative;
-	background: #ffffff;
-	border-radius: .4em;
+		position: relative;
+		background: #ffffff;
+		border-radius: .4em;
 	}
 
 	.speech-bubble {
